# fastapi-book

./: .env.example  .gitignore  README.md  pyproject.toml  test_redis_connection.py
alembic/: env.py  env_sync.py
alembic/versions/: 3563ce3bb8aa_initial_migration_create_users_table.py  5dd94ab6a765_init.py  5de4b0fdd5c0_clear_constraints.py  5f25420bd585_wechat.py  b00612eda73a_init.py  b9c28717229a_hospital.py  c66aeecf6740_init.py  ce8f3e4004b9_init.py  d272c660bc89_init.py
chatroom/: main.py
chatroom/app/routers/: room.py  user.py
chatroom/app/templates/: login.html  register.html  room.html
chatroom/infra/: config.py  utils.py
docker/: docker-compose.yaml
docker/init-scripts/: init_schemas.sql
fastapi_book/: README.md  __init__.py
fastapi_book/infra/: db.py
projects/chatroom/: README.md
projects/chatroom/infra/: __init__.py
projects/hospital/domain/: models.py
projects/hospital/infra/: __init__.py  config.py  db.py  redis.py
projects/oauth2/: README.md
projects/oauth2/auth/: config.py  db.py  main.py  resource.py
projects/oauth2/backend/: config.py  config.yaml  main copy.py  main.py
projects/oauth2/frontend/: package-lock.json
projects/oauth2_app_backend/: main.py
projects/oauth2_app_backend/app/: exception_handlers.py  service.py
projects/oauth2_app_backend/context/: __init__.py  app_container.py  app_infra.py
projects/oauth2_app_backend/impl/: session_manager.py
projects/oauth2_app_backend/infra/: __init__.py  db.py
projects/oauth2_server/: config.yaml
projects/short_url/: config.py  db.py  depends.py
projects/wechat/: main.py
spa/: package.json
src/fastapi_book/: __init__.py  cache.py  config.py  context.py  db.py  dependencies.py  main.py  redis_config.py  utils.py
(+94 files in other folders)
