[project]
name = "fastapi-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"



dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]



[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
